[gd_scene load_steps=3 format=3 uid="uid://x8jlcb2ucsp3"]

[ext_resource type="Script" path="res://scripts/ui/dialogue_view.gd" id="1_hnmcb"]
[ext_resource type="Texture2D" uid="uid://dhsrujoyyaeak" path="res://icon.svg" id="2_g75rv"]

[node name="DialogueView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hnmcb")
sentence = Array[String](["Hello", "World"])

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 205)
texture = ExtResource("2_g75rv")

[node name="DialogueLab" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.0
offset_top = 19.0
offset_right = 251.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Hello,world"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogueBtn" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
